form z-index issue fix, signup up images setting form fix

--- a/style.css
+++ b/style.css
@@ -3770,6 +3770,7 @@ p.cities-job-heading {
     text-align: center;
     color: var(--primary-color);
     font-size: 28px;
+    font-family: var(--museo-sans);
     font-weight: var(--font-weight-bold);
 }
 
@@ -3780,20 +3781,37 @@ p.cities-job-heading {
 }
 
 .city-img {
-    max-width: 30%;
+    max-width: 25%;
     width: 100%;
+    margin: 0 auto;
+    text-align: center;
+}
+
+.city-img img {
+    height: 75px;
+    width: 75px;
+    object-fit: cover;
+}
+
+p.country-img-text {
+    color: var(--primary-color);
+    font-size: 18px;
+    padding-top: 5px;
+    font-weight: var(--font-weight-medium);
+    font-family: var(--museo-sans);
 }
 
 .cities-btn {
-    max-width: 70%;
+    max-width: 75%;
     width: 100%;
     display: flex;
     flex-wrap: wrap;
-    gap: 15px;
+    gap: 15px 0;
+    padding-left: 30px;
 }
 
 .city-radio-btn {
-    max-width: 30%;
+    max-width: 25%;
     width: 100%;
 }
 
@@ -4286,7 +4304,7 @@ div#fsalary-year {
 }
 
 .cities-center-in-form {
-    max-width: 50%;
+    max-width: 62%;
     margin: 20px auto 0;
 }
 
@@ -12508,7 +12526,7 @@ img.del-res {
 
 img.del-res-skill {
     position: absolute;
-    top: 10px;
+    top: 12px;
     right: 0;
     margin: 0 10px;
     z-index: 4;
@@ -12584,7 +12602,7 @@ button.resume-exper-right-tb {
     box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.16);
     width: 49%;
     overflow: auto;
-    z-index: 2;
+    z-index: 5;
     margin: 5px 0 0 auto;
     right: 0;
     top: 90%;
@@ -12632,7 +12650,7 @@ button.resume-exper-right-tb {
     box-shadow: 0px 2px 6px 1px rgba(0, 0, 0, 0.16);
     width: 49%;
     overflow: auto;
-    z-index: 2;
+    z-index: 5;
     margin: 5px 0 0 auto;
     left: 0;
     top: 90%;
@@ -17919,6 +17937,7 @@ p.text-prom-below {
         max-width: 100%;
         margin-top: 20px;
         justify-content: center;
+        padding-left: 0px;
     }
     .city-radio-btn {
         max-width: 30%;
@@ -19156,7 +19175,7 @@ p.text-prom-below {
         padding: 10px 10px;
         font-size: 14px;
     }
-      button.regenerate-res {
+    button.regenerate-res {
         min-width: 150px;
         margin-right: 0;
         padding: 10px 10px;
@@ -19184,7 +19203,7 @@ p.text-prom-below {
         margin-top: 8px;
     }
     .textedditor-jbmdl-exp {
-      margin-top: 8px;
+        margin-top: 8px;
     }
     .img-text-jbmdl-right img,
     .img-text-jbmdl img {
